--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,12 +102,13 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.1.1",
     "jest-junit": "^16.0.0",
-    "postcss": "^8.5",
+    "postcss": "^8.5.0",
     "prettier": "^3.6.2",
-    "source-map": "^0.6.1",
+    "source-map": "^0.7.4",
     "tailwindcss": "^4.1.9",
     "ts-jest": "^29.4.1",
     "tw-animate-css": "1.3.3",
